--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "An online lending platform that provides short term soft loans to individuals",
   "main": "./backend/dist/server.js",
   "scripts": {
-    "start": "npm run build && nodemon --exec babel-node ./backend/dist/server.js",
+    "start": "npm run build && babel-node ./backend/dist/server.js",
     "build": "babel ./backend/src --out-dir ./backend/dist --source-maps",
     "dev": "npm run build && nodemon --exec babel-node ./backend/src/server.js",
     "serve": "node ./backend/dist/server.js",
-    "test": "mocha ./backend/tests/**/*.spec.js",
+    "test": "mocha --exit ./backend/tests/**/*.spec.js",
     "debug": "node --inspect-brk ./backend/dist/server.js",
     "lint": "eslint ./backend --fix"
   },
