--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.5.6",
     "npm-run-all": "^4.1.5",
+    "swagger-jsdoc": "^3.2.9",
+    "swagger-ui-express": "^4.0.2",
     "winston": "^3.2.1"
   },
   "devDependencies": {
