--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "./backend/dist/server.js",
   "scripts": {
     "start": "npm run build && babel-node ./backend/dist/server.js",
+    "build-database": "node ./backend/database/db.js",
+    "drop-database": "node ./backend/database/drop-db.js",
     "build": "babel ./backend/src --out-dir ./backend/dist --source-maps",
     "dev": "npm run build && nodemon --exec babel-node ./backend/src/server.js",
     "serve": "node ./backend/dist/server.js",
@@ -37,9 +39,11 @@
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "express": "^4.16.4",
+    "faker": "^4.1.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.5.6",
     "npm-run-all": "^4.1.5",
+    "pg": "^7.11.0",
     "swagger-jsdoc": "^3.2.9",
     "swagger-ui-express": "^4.0.2",
     "winston": "^3.2.1"
