feature(user-signup-database): implement signup API with database
- create database query tests
- implement database query for signup API endpoint

[Finishes #166179255]

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ before_script:
   - ./cc-test-reporter before-build
   - psql -c 'create database travis_ci_test;' -U postgres
 script:
- - npm run node ./backend/database/db.js
+ - node ./backend/database/db.js
  - npm run coveralls
  - npm run coverage
 after_script:
