--- a/.travis.yml
+++ b/.travis.yml
@@ -10,12 +10,16 @@ env:
     - NODE_ENV=test
 node_js:
  - "8.12.0"
+services:
+ - postgresql
 before_script:
   - yarn global add nyc
   - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
   - chmod +x ./cc-test-reporter
   - ./cc-test-reporter before-build
+  - psql -c 'create database travis_ci_test;' -U postgres
 script:
+ - node ./backend/database/db.js
  - npm run coveralls
  - npm run coverage
 after_script:
