--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "start": "npm run build && babel-node ./backend/dist/server.js",
     "build-database": "node ./backend/database/db.js",
     "drop-database": "node ./backend/database/drop-db.js",
+    "seed-database": "node ./backend/seeds/seedTestData.js",
     "build": "babel ./backend/src --out-dir ./backend/dist --source-maps",
     "dev": "npm run build && nodemon --exec babel-node ./backend/src/server.js",
     "serve": "node ./backend/dist/server.js",
-    "test": "mocha ./backend/tests/**/*.spec.js --timeout 10000 --exit",
+    "test": "mocha ./backend/tests/**/*.spec.js --timeout 20000 --exit",
     "debug": "node --inspect-brk ./backend/dist/server.js",
     "lint": "eslint ./backend --fix",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
